--- a/djangotest/templates/rango/add_category.html
+++ b/djangotest/templates/rango/add_category.html
@@ -14,6 +14,6 @@
 				{{ field}}
 			{% endfor %}
 
-			<input type="submit" name="submit" value="Create Category">
+			<input type="submit" name="submit" value="½¨Á¢Ä¿Â¼">
 		</form>
 {% endblock %}	
